# WaveLab

./: .gitignore  404.html  LICENSE  README.md  __init__.py  config.py  engine.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  singularities.py  spectras.py  utils.py
api/config/: index.html
api/core/: index.html
api/singularities/: index.html
api/utils/: index.html
backends/: numba_backend.py
docs/api/: config.md  core.md  singularities.md  utils.md
docs/tutorials/: Scalar_tutorial.ipynb  Vector_tutorial.ipynb
search/: search_index.json
src/wavelab/: __init__.py  beam_maker.py  beam_stuff.py  config.py  config_stuff.py  engine_maker.py  engine_stuff.py  singularities.py  spectra.py  utils.py  version.py
src/wavelab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wavelab/backends/: numpy_backend.py
tutorial/: Scalar_tutorial.ipynb  Vector_tutorial.ipynb
tutorials/Scalar_tutorial/: index.html
tutorials/Vector_tutorial/: index.html
